[tool.poetry]
name = "lumina"
version = "0.1.0"
description = ""
authors = ["Will Pimblett <will@wjdp.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
mangum = "^0.12.3"
pydantic = {extras = ["email"], version = "^1.9.0"}
pyhumps = "^3.5.0"
PyJWT = "^2.3.0"
cryptography = "^36.0.1"
requests = "^2.27.1"
boto3 = {extras = ["ses"], version = "^1.20.33"}
boto3-stubs = {extras = ["ses", "dynamodb"], version = "^1.20.41"}
Jinja2 = "^3.0.3"
html2text = "^2020.1.16"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
uvicorn = "^0.16.0"
mypy = "^0.931"
freezegun = "^1.1.0"
moto = {extras = ["ses"], version = "^2.3.1"}
PyYAML = "^6.0"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
files = "src"
pretty = true
ignore_missing_imports = true
